# bizclaw

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  Dockerfile  Dockerfile.gateway  Dockerfile.platform  Dockerfile.standalone  HANDOVER.md  HANDOVER_V2.md  README.md  README_SME.md  config.quickstart.toml  docker-compose.prod.yml  install.sh  pitch-deck.html
crates/bizclaw-agent/: Cargo.toml
crates/bizclaw-agent/src/: a2a.rs  agent_spawn.rs  context.rs  context_summarizer.rs  coordination.rs  feedback.rs  file_upload.rs  lib.rs  middleware.rs  orchestrator.rs  pairing.rs  pipeline.rs  preparsed.rs  self_evolution.rs  subagent.rs
crates/bizclaw-agi/: Cargo.toml
crates/bizclaw-agi/src/: evaluator.rs  experiments.rs  lib.rs  loop_engine.rs  replanner.rs  ses.rs  world_state.rs
crates/bizclaw-agi/tests/: agi_tests.rs
crates/bizclaw-browser/: Cargo.toml
crates/bizclaw-browser/examples/: cdp_test.rs  stealth_eval.rs
crates/bizclaw-browser/src/: behavior.rs  captcha.rs  cdp.rs  error.rs  lib.rs  proxy.rs  session.rs  skills.rs  stealth.rs  tools.rs
crates/bizclaw-catchme/: Cargo.toml
crates/bizclaw-catchme/src/: event.rs  lib.rs  store.rs  tree.rs
crates/bizclaw-catchme/src/record/: clipboard.rs  mod.rs  window.rs
crates/bizclaw-catchme/tests/: tree_integration.rs
crates/bizclaw-content/: Cargo.toml
crates/bizclaw-content/src/: generator.rs  lib.rs  scheduler.rs  templates.rs  types.rs
crates/bizclaw-content/tests/: content_tests.rs
crates/bizclaw-crm/: Cargo.toml
crates/bizclaw-crm/src/: lib.rs  manager.rs  types.rs
crates/bizclaw-crm/src/omni/: customer360.rs  dedupe.rs  mod.rs
crates/bizclaw-ecommerce/: Cargo.toml
crates/bizclaw-ecommerce/src/: lib.rs  shopee.rs  tiktok.rs  types.rs
crates/bizclaw-ecommerce/tests/: integration_tests.rs
crates/bizclaw-evaluator/: Cargo.toml
crates/bizclaw-evaluator/src/: ab_test.rs  dataset.rs  judge.rs  lib.rs  metrics.rs  report.rs  rubric.rs  runner.rs
crates/bizclaw-hai/: Cargo.toml
crates/bizclaw-hai/src/: confidence.rs  fallback.rs  flow.rs  handoff.rs  lib.rs  rollback.rs  trust.rs
crates/bizclaw-hermes/: Cargo.toml
crates/bizclaw-hermes/src/: agent.rs  chat.rs  hermes_skills.rs  lib.rs  models.rs  tools.rs
crates/bizclaw-i18n/: Cargo.toml  README.md
crates/bizclaw-i18n/src/: lib.rs
crates/bizclaw-khazix/: Cargo.toml
crates/bizclaw-khazix/src/: lib.rs  registry.rs  runner.rs  skill.rs  skills.rs
crates/bizclaw-media/: Cargo.toml
crates/bizclaw-media/src/: lib.rs  minimax.rs
crates/bizclaw-memory-redb/: Cargo.toml
crates/bizclaw-memory-redb/src/: lib.rs  store.rs  types.rs
crates/bizclaw-memory-search/: Cargo.toml
crates/bizclaw-memory-search/src/: index.rs  lib.rs  query.rs  schema.rs
crates/bizclaw-memory-vector/: Cargo.toml
crates/bizclaw-memory-vector/src/: hnsw.rs  index.rs  lib.rs  types.rs
crates/bizclaw-obsidian/: Cargo.toml
crates/bizclaw-obsidian/src/: lib.rs  memory.rs  search.rs  skills.rs  vault.rs
crates/bizclaw-office/: Cargo.toml
crates/bizclaw-office/src/: lib.rs  report.rs  spreadsheet.rs  types.rs
crates/bizclaw-redteam/: Cargo.toml
crates/bizclaw-redteam/src/: compliance.rs  exfiltration.rs  injection.rs  jailbreak.rs  lib.rs  report.rs  scanner.rs  scenarios.rs
crates/bizclaw-sandbox/: Cargo.toml
crates/bizclaw-sandbox/src/: config.rs  executor.rs  lib.rs
crates/bizclaw-skillforge/: Cargo.toml
crates/bizclaw-skillforge/src/: analyzer.rs  extractor.rs  generator.rs  lib.rs
crates/bizclaw-skillforge/src/auto_install/: marketplace_client.rs  mod.rs
crates/bizclaw-skillforge/tests/: skillforge_tests.rs
crates/bizclaw-skills/: Cargo.toml
crates/bizclaw-skills/src/: builtin.rs  gating.rs  harrier.rs  lib.rs  marketplace.rs  parser.rs  registry.rs  web.rs  webclaw.rs
crates/bizclaw-skills/src/skills/: api_designer.md  bizclaw_architecture.md  bizclaw_code_review.md  bizclaw_deploy_engineer.md  bizclaw_feature_review.md  bizclaw_security_hardening.md  bizclaw_test_engineer.md  content_writer.md  devops_engineer.md  git_workflow.md  python_analyst.md  rust_expert.md  security_auditor.md  sql_expert.md  trend_to_post.md  vietnamese_business.md  web_developer.md
crates/bizclaw-social/: Cargo.toml  README.md
crates/bizclaw-social/src/: adapters.rs  facebook.rs  facebook_inbox.rs  facebook_poster.rs  instagram.rs  lib.rs  scheduler.rs  social_manager.rs  tiktok.rs  types.rs  zalo.rs
crates/bizclaw-tools/: Cargo.toml
crates/bizclaw-tools/examples/: channel_login.rs  test_stealth.rs
crates/bizclaw-tools/src/: api_connector.rs  auto_message.rs  browser.rs  browser_hand.rs  bundle_provisioner.rs  catchme_search.rs  cdp_browser.rs  computer_use.rs  config_manager.rs  content_marketing.rs  custom_tool.rs  db_connection.rs  db_examples.rs  db_query.rs  db_safety.rs  db_schema.rs  db_semantic.rs  edit_file.rs  execute_code.rs  facebook_tools.rs  file.rs  glob_find.rs  gmail.rs  grep_search.rs  group_summarizer.rs  http_request.rs  insight_extraction.rs  lib.rs  media_extractor.rs  memory_search.rs  nl_query.rs  orchestration.rs  persistent_bash.rs  plan_tool.rs  preparsed.rs  registry.rs  research.rs  session_context.rs  social_post.rs  stealth_browser.rs  (+2 more)
crates/bizclaw-tracing/: Cargo.toml
crates/bizclaw-tracing/src/: exporter.rs  lib.rs  metrics.rs  spans.rs
crates/bizclaw-trendradar/: Cargo.toml
crates/bizclaw-trendradar/src/: lib.rs
crates/bizclaw-trendradar/src/alerts/: mod.rs
crates/bizclaw-trendradar/src/analyzer/: mod.rs
crates/bizclaw-trendradar/src/detector/: mod.rs
crates/bizclaw-trendradar/src/sources/: mod.rs
crates/bizclaw-updater/: Cargo.toml
crates/bizclaw-updater/src/: lib.rs
crates/bizclaw-webauth/: Cargo.toml
crates/bizclaw-webauth/src/: cdp.rs  cookie_auth.rs  lib.rs  pipeline.rs  proxy.rs  types.rs
crates/bizclaw-webauth/src/providers/: chatgpt.rs  claude.rs  gemini.rs  (+3 more)
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: app.rs  commands.rs  lib.rs  main.rs  state.rs  system_tray.rs
desktop/src-ui/: index.html  package.json  vite.config.ts
desktop/src-ui/src/: App.tsx  styles.css
(+368 files in other folders)
