[package]
name = "bizclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent engine and core loop for BizClaw"

[dependencies]
bizclaw-core.workspace = true
bizclaw-providers.workspace = true
bizclaw-channels.workspace = true
bizclaw-memory.workspace = true
bizclaw-tools.workspace = true
bizclaw-security.workspace = true
bizclaw-mcp.workspace = true
bizclaw-knowledge.workspace = true
bizclaw-db.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
dirs.workspace = true
shellexpand.workspace = true
pdf-extract = "0.10.0"
zip = "8.1.0"
calamine = "0.33.0"
regex = "1.12.3"
