[package]
name = "bizclaw-agi"
version = "0.1.0"
edition = "2021"
description = "AGI Loop Engine - Fully autonomous execution loop for AI agents"
authors = ["BizClaw Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
