[package]
name = "bizclaw-catchme"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure Rust port of CatchMe - Digital Footprint capture & analysis"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
crossbeam-channel = "0.5"
arboard = "3.6.1"
active-win-pos-rs = "0.10.0"

# System monitoring (to be enabled lazily or via features)
# active-win-pos-rs = "0.8"
# rdev = "0.5"
# arboard = "3.3"
