[package]
name = "bizclaw-content"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-powered content automation for BizClaw"

[dependencies]
bizclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
