[package]
name = "bizclaw-crm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Social CRM for SME - Unified inbox + Customer management"

[dependencies]
bizclaw-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
fuzzy-matcher = "0.3"

[dev-dependencies]
