[package]
name = "bizclaw-ecommerce"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Official E-commerce API integrations for BizClaw (TikTok Shop, Shopee)"

[dependencies]
bizclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
