[package]
name = "bizclaw-evaluator"
version = "1.1.7"
edition = "2021"
authors = ["BizClaw Team"]
description = "Agent Evaluator - Rubric-based scoring, LLM-as-judge, golden datasets, A/B evaluation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nguyenduchoai/bizclaw"
keywords = ["ai", "agent", "evaluation", "testing", "llm-as-judge"]
categories = [" artificial-intelligence", "testing"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }

bizclaw-core = { workspace = true }
bizclaw-agent = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
