[package]
name = "bizclaw-hai"
version = "1.1.7"
edition = "2021"
authors = ["BizClaw Team"]
description = "Human-AI Interaction Designer - Conversation flows, confidence indicators, rollback"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nguyenduchoai/bizclaw"
keywords = ["ai", "agent", "ux", "conversation", "human-agent"]
categories = [" artificial-intelligence", "web-programming"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

bizclaw-core = { workspace = true }
bizclaw-agent = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
