[package]
name = "bizclaw-hermes"
version = "0.1.0"
edition = "2021"
description = "Hermes Agent - NousResearch Hermes models với tool-calling cho BizClaw"
authors = ["BizClaw Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
