[package]
name = "bizclaw-i18n"
version = "0.1.0"
edition = "2021"
description = "Internationalization system for BizClaw"
authors = ["BizClaw Team"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
glob = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
