[package]
name = "bizclaw-media"
version = "0.1.0"
edition = "2021"
description = "Media generation and processing for BizClaw (Image, Video, Audio)"

[dependencies]
bizclaw-core = { path = "../bizclaw-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
