[package]
name = "bizclaw-memory-redb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 1: Hot KV storage using redb embedded database"

[dependencies]
bizclaw-core.workspace = true
redb = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
shellexpand.workspace = true

[dev-dependencies]
tempfile.workspace = true
