[package]
name = "bizclaw-memory-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 2: Full-text search using tantivy"

[dependencies]
bizclaw-core.workspace = true
tantivy = "0.22"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
shellexpand.workspace = true

[dev-dependencies]
tempfile.workspace = true
