[package]
name = "bizclaw-memory-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layer 3: Vector/semantic search using HNSW algorithm"

[dependencies]
bizclaw-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
shellexpand.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
