[package]
name = "bizclaw-obsidian"
version = "0.1.0"
edition = "2021"
description = "Obsidian Vault integration cho BizClaw - Knowledge management, RAG search, và SKILL.md management"
authors = ["BizClaw Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
tantivy = "0.22"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3.10"
