[package]
name = "bizclaw-office"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Office automation for BizClaw (Documents, Reports, Spreadsheets)"

[dependencies]
bizclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
