[package]
name = "bizclaw-redteam"
version = "1.1.7"
edition = "2021"
authors = ["BizClaw Team"]
description = "Agent Red Teamer - Security testing, injection scenarios, compliance checks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nguyenduchoai/bizclaw"
keywords = ["ai", "agent", "security", "red-team", "penetration-testing"]
categories = [" artificial-intelligence", "security"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

bizclaw-core = { workspace = true }
bizclaw-agent = { workspace = true }
bizclaw-security = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
