[package]
name = "bizclaw-sandbox"
version = "1.1.7"
edition = "2021"
description = "CubeSandbox integration for safe AI code execution"
authors = ["BizClaw Team"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
