[package]
name = "bizclaw-skillforge"
version = "0.1.0"
edition = "2021"
description = "SkillForge Engine - Auto-discovery và self-improvement cho AI agents"
authors = ["BizClaw Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
