[package]
name = "bizclaw-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Skills marketplace — SKILL.md parser, registry, discovery, and marketplace"

[dependencies]
bizclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
thiserror.workspace = true
toml.workspace = true
shellexpand.workspace = true
urlencoding.workspace = true
webclaw-core = { git = "https://github.com/0xMassi/webclaw" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
